syntax = "proto3";

option go_package = ".";

package pb;

message Ingredient {
  int64 id = 1;
  string name = 2;
  string imageContent = 3;
  string description = 4;
}

message IngredientDetailReq {
  string name = 1;
}

message IngredientDetailResp {
    Ingredient ingredient = 1;
}

message IngredientListReq {
  int64 page = 1;
  int64 pageSize = 2;
}

message IngredientListResp {
  repeated Ingredient list = 1;
}

message IngredientCreateReq {
  string name = 1;
  string image_content = 2;
  string description = 3;
}

message IngredientCreateResp {
}

service ingredient {
  // 食材详情
  rpc ingredientDetail(IngredientDetailReq) returns (IngredientDetailResp);
  // 食材列表
  rpc ingredientList(IngredientListReq) returns (IngredientListResp);
  // 添加食材
  rpc ingredientCreate(IngredientCreateReq) returns (IngredientCreateResp);
}